--- a/pages/divider-optimized/index.html
+++ b/pages/divider-optimized/index.html
@@ -47,7 +47,7 @@
                 <div id="remainder-view-port"></div>
             </div>
             
-            <button id="do">DO</button>
+            <button id="do">STEP</button>
             <button id="undo">UNDO</button>
             <button id="conclude">CONCLUDE</button>
             <button id="reset">RESET</button>
